<resources>
    <string name="app_name">SudokuWizardApp</string>

    <!-- Main Menu Buttons -->
    <string name="board_editor_button">Start Board</string>
    <string name="board_scan_button">Scan Board</string>

    <!-- New Board Text -->
    <string name="manual_board_confirmation">Start game with current board?</string>

    <!-- Scan Board Text -->
    <string name="scan_confirmation">Continue with current scan?</string>

    <!-- General Buttons -->
    <string name="solve_button">Solve</string>
    <string name="edit_button">Edit</string>
    <string name="clear_board_button">Clear</string>
    <string name="cancel_button">Cancel</string>
    <string name="continue_button">Continue</string>

    <!-- Number Buttons for Cells -->
    <string name="one_button">1</string>
    <string name="two_button">2</string>
    <string name="three_button">3</string>
    <string name="four_button">4</string>
    <string name="five_button">5</string>
    <string name="six_button">6</string>
    <string name="seven_button">7</string>
    <string name="eight_button">8</string>
    <string name="nine_button">9</string>
    <string name="clear_cell_button">C</string>

    <!-- PLACEHOLDERS -->
    <string name="title_placeholder">Sudoku Wizard</string>
</resources>